<resources>
    <string name="app_name">My Application</string>
    <string name="gotonextactivity">goToNextActivity</string>
    <string name="secondactivity">secondActivity</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="textview">TextView</string>
    <string name="_1">+1</string>
    <string name="send">send</string>
    <string name="show_tost">Show Tost</string>
    <string name="open_camera">Open Camera</string>
    <string name="select_image">Select Image</string>
    <string name="open_dialpad">Open DialPad</string>
    <string name="open_alert_dialoge">Open Alert Dialoge</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="show_pref">Show Pref</string>
    <string name="save_pref">Save Pref</string>
    <string name="show_data">Show Data</string>
    <string name="download_image">Download Image</string>
    <string name="download_web_content">Download Web Content</string>
    <string name="show_into_file">Show into File</string>
    <string name="save_into_file">Save into File</string>
    <string name="name">Name</string>
    <string name="read_from_file">Read From File</string>
    <string name="request_permission">Request Permission</string>
    <string name="cheack_permission">Cheack Permission</string>
    <string name="read_contact_permission">Read Contact Permission</string>
</resources>